# hho

./: Cargo.toml  README.md  hho.code-workspace  plan.md  styles.css
hho-types/: Cargo.toml
hho-types/src/: lib.rs
src/: app.rs  dto.rs  ipc.rs  logic.rs  main.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mapping.rs
src/components/: assign_modal.rs  create_transaction_modal.rs  debug_log.rs  draggable.rs  header.rs  mapping_modal.rs  mod.rs  month_modal.rs  nickname_editor_modal.rs  nickname_rules_modal.rs  pane.rs  print_view.rs  resize_handle.rs  rule_editor_modal.rs  rules_modal.rs  split_transaction_modal.rs  transaction_editor_modal.rs
